Update Sending Email Service
- New Email Service.
- Payment Upgrade integrated with Email Service.
- Swagger Endpoint Update.
- README.md file.
